--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-trait = "0.1.58"
 cookie = { version = "0.16.1", features = ["percent-encode"] }
 hyper = { version = "0.14", features = ["stream", "server", "http1", "http2", "tcp", "client"] }
+multer = "2.0.4"
 multimap = "0.8.3"
 once_cell = "1.15.0"
 serde = { version = "1.0.147", features = ["derive"] }
+serde_json = "1.0.87"
+thiserror = "1.0.37"
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
