--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["mulitimap", "multer", "newtype", "serde", "struct"]
+  "cSpell.words": [
+    "mulitimap",
+    "multer",
+    "newtype",
+    "serde",
+    "struct",
+    "thiserror"
+  ]
 }
