--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.66"
 async-trait = "0.1.58"
 cookie = { version = "0.16.1", features = ["percent-encode"] }
+form_urlencoded = "1.1.0"
 hyper = { version = "0.14", features = ["stream", "server", "http1", "http2", "tcp", "client"] }
+mime = "0.3.16"
 multer = "2.0.4"
 multimap = "0.8.3"
 once_cell = "1.15.0"
