--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ multer = "2.0.4"
 multimap = "0.8.3"
 once_cell = "1.15.0"
 serde = { version = "1.0.147", features = ["derive"] }
-serde_json = "1.0.87"
+serde_json = { version = "1.0.87", features = ["raw_value"] }
+tempfile = "3.3.0"
+textnonce = "1.0.0"
 thiserror = "1.0.37"
-tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "fs"] }
