--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.66"
 async-trait = "0.1.58"
 cookie = { version = "0.16.1", features = ["percent-encode"] }
+cruet = "0.13.1"
 form_urlencoded = "1.1.0"
 hyper = { version = "0.14", features = ["stream", "server", "http1", "http2", "tcp", "client"] }
 mime = "0.3.16"
@@ -21,3 +22,4 @@ tempfile = "3.3.0"
 textnonce = "1.0.0"
 thiserror = "1.0.37"
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "fs"] }
+tracing = "0.1.37"
