--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ async-trait = "0.1.58"
 cookie = { version = "0.16.1", features = ["percent-encode"] }
 cruet = "0.13.1"
 form_urlencoded = "1.1.0"
+futures = "0.3.25"
 hyper = { version = "0.14", features = ["stream", "server", "http1", "http2", "tcp", "client"] }
 mime = "0.3.16"
 multer = "2.0.4"
