--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,5 @@ tempfile = "3.3.0"
 textnonce = "1.0.0"
 thiserror = "1.0.37"
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "fs"] }
+tokio-stream = "0.1.11"
 tracing = "0.1.37"
