--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,12 @@
     "Deque",
     "deref",
     "hbody",
+    "impls",
+    "Inflector",
     "middlewares",
     "mulitimap",
     "multer",
+    "multimap",
     "multiparts",
     "newtype",
     "serde",
