--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ mime = "0.3.16"
 multer = "2.0.4"
 multimap = "0.8.3"
 once_cell = "1.15.0"
+percent-encoding = "2.2.0"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = { version = "1.0.87", features = ["raw_value"] }
 tempfile = "3.3.0"
