--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,9 @@ mime = "0.3.16"
 multer = "2.0.4"
 multimap = "0.8.3"
 once_cell = "1.15.0"
+parking_lot = "0.12.1"
 percent-encoding = "2.2.0"
+regex = "1.6.0"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = { version = "1.0.87", features = ["raw_value"] }
 tempfile = "3.3.0"
