--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,9 @@
     "multimap",
     "multiparts",
     "newtype",
+    "scaned",
     "serde",
+    "splitn",
     "struct",
     "tempdir",
     "thiserror",
