--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,10 @@ anyhow = "1.0.66"
 async-trait = "0.1.58"
 cookie = { version = "0.16.1", features = ["percent-encode"] }
 cruet = "0.13.1"
+fastrand = "1.8.0"
 form_urlencoded = "1.1.0"
 futures = "0.3.25"
+futures-util = "0.3.25"
 hyper = { version = "0.14", features = ["stream", "server", "http1", "http2", "tcp", "client"] }
 mime = "0.3"
 multer = "2.0.4"
