--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.66"
 async-trait = "0.1.58"
+base64 = "0.13.1"
 cookie = { version = "0.16.1", features = ["percent-encode"] }
 cruet = "0.13.1"
 fastrand = "1.8.0"
@@ -24,9 +25,11 @@ percent-encoding = "2.2.0"
 regex = "1.6.0"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = { version = "1.0.87", features = ["raw_value"] }
+serde_urlencoded = "0.7.1"
 tempfile = "3.3.0"
 textnonce = "1.0.0"
 thiserror = "1.0.37"
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "fs"] }
 tokio-stream = "0.1.11"
 tracing = "0.1.37"
+url = "2.3.1"
