--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,13 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.66"
+async-compression = { version = "0.3.15", features = ["gzip", "deflate", "brotli", "tokio"] }
 async-trait = "0.1.58"
 base64 = "0.13.1"
+bytes = "1.2.1"
 cookie = { version = "0.16.1", features = ["percent-encode"] }
 cruet = "0.13.1"
+encoding_rs = "0.8.31"
 fastrand = "1.8.0"
 form_urlencoded = "1.1.0"
 futures = "0.3.25"
