--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
+[lib]
+proc-macro = true
+
 [dependencies]
 anyhow = "1.0.66"
 async-compression = { version = "0.3.15", features = ["gzip", "deflate", "brotli", "tokio"] }
@@ -25,10 +29,13 @@ multimap = "0.8.3"
 once_cell = "1.15.0"
 parking_lot = "0.12.1"
 percent-encoding = "2.2.0"
+proc-macro2 = "1.0.47"
+quote = "1.0.21"
 regex = "1.6.0"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = { version = "1.0.87", features = ["raw_value"] }
 serde_urlencoded = "0.7.1"
+syn = "1.0.103"
 tempfile = "3.3.0"
 textnonce = "1.0.0"
 thiserror = "1.0.37"
