--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,15 +3,18 @@ name = "salvo_t"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-
-[lib]
-proc-macro = true
+[workspace]
+members = ["macros"]
 
 [dependencies]
+salvo-macros = { version = "0.37.1", path = "macros" }
 anyhow = "1.0.66"
-async-compression = { version = "0.3.15", features = ["gzip", "deflate", "brotli", "tokio"] }
+async-compression = { version = "0.3.15", features = [
+    "gzip",
+    "deflate",
+    "brotli",
+    "tokio",
+] }
 async-trait = "0.1.58"
 base64 = "0.13.1"
 bytes = "1.2.1"
@@ -22,20 +25,24 @@ fastrand = "1.8.0"
 form_urlencoded = "1.1.0"
 futures = "0.3.25"
 futures-util = "0.3.25"
-hyper = { version = "0.14", features = ["stream", "server", "http1", "http2", "tcp", "client"] }
+hyper = { version = "0.14", features = [
+    "stream",
+    "server",
+    "http1",
+    "http2",
+    "tcp",
+    "client",
+] }
 mime = "0.3"
 multer = "2.0.4"
 multimap = "0.8.3"
 once_cell = "1.15.0"
 parking_lot = "0.12.1"
 percent-encoding = "2.2.0"
-proc-macro2 = "1.0.47"
-quote = "1.0.21"
 regex = "1.6.0"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = { version = "1.0.87", features = ["raw_value"] }
 serde_urlencoded = "0.7.1"
-syn = "1.0.103"
 tempfile = "3.3.0"
 textnonce = "1.0.0"
 thiserror = "1.0.37"
