--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -8,7 +8,7 @@ proc-macro = true
 
 [dependencies]
 quote = "1.0.21"
-syn = "1.0.103"
+syn = { version = "1.0.103", features = ["full", "parsing"] }
 proc-macro2 = "1.0.47"
 proc-macro-crate = "1.2.1"
 regex = "1.7.0"
